# toxtransformer

./: .cursorignore  .dockerignore  .gcloudignore  .gitignore  API_USAGE.md  Dockerfile  Dockerfile.cuda  Dockerfile.pdaa  Dockerfile.streamlit  README.md  cloudbuild.pdaa.yaml  cloudbuild.yaml  dvc.yaml  environment.yml  pyproject.toml  requirements.pdaa.txt  requirements.streamlit.txt  requirements.txt  scratch.md  setup_cpp.py  slackmsg  streamlit_app.py  test.py
.gcloud/: README.md  gcp-config.sh  gcp-functions.sh  setup.sh  setup_training.sh  startup-script.sh
.toxindex/: manifest.jsonld
adapter/: __init__.py  cli.py  evaluator.py  feature_extractor.py  models.py  semantic_selector.py  trainer.py
code/: 04_build_sqlite.py  05_build_tensordataset.py  06_token_information.py  10_generate_evaluations_holdout_nprops1.py  11_generate_evaluations_holdout_context.py  1_3_preprocess_activities.py  2_1_build_datasets.py  2_2_build_sqlite.py  2_3_build_tensordataset.py  2_4_analyze_datasets.py  2_4_merge_tensordataset.py  2_build_sqlite.py  2_build_tensordataset.py  3_0_get_benchmark_properties.py  3_1_1_train_multitask_transformer_parallel.py  3_1_2_train_adapters.py  3_1_2_train_adapters_all_props.py  3_1_2_train_adapters_ray.py  3_1_train_multitask_transformer_parallel.py  3_2_get_benchmark_properties.py  3_3_finetune_benchmarks.py  5_0_0_generate_evaluations.py  5_0_1_consolidate_evaluations.py  5_0_2_0_direct_evaluation.py  5_0_2_direct_evaluation.py  5_0_2_get_benchmark_properties.py  5_0_3_0_direct_evaluation_predictions.py  5_0_3_direct_evaluation_predictions.py  (+8 more)
(+167 files in other folders)
